@@ -6,12 +6,26 @@ class VariablesController < ApplicationController
 
   layout 'project'
 
-  def index
+  def show
+  end
+
+  def update
+    if project.update_attributes(project_params)
+      EventService.new.change_project_settings(current_user, project)
+
+      redirect_to :back, notice: 'Variables was successfully updated.'
+    else
+      render action: 'show'
+    end
   end
 
   private
 
   def project
     @project ||= Project.find(params[:project_id])
+  end
+
+  def project_params
+    params.require(:project).permit({ variables_attributes: [:id, :key, :value, :_destroy] })
   end
 end
