@@ -66,7 +66,7 @@ Rails.application.routes.draw do
     resources :runner_projects, only: [:create, :destroy]
 
     resources :events, only: [:index]
-    resources :variables, only: [:index]
+    resource :variables, only: [:show, :update]
   end
 
   resource :user_sessions do
